kubernetes/utilities/stirling-pdf/stirling-pdf.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirlingpdf
  namespace: utilities
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll            
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirlingpdf
      app.kubernetes.io/name: stirlingpdf
  template:
    metadata:
      labels:
        app: stirlingpdf
        app.kubernetes.io/name: stirlingpdf
    spec:
      containers:
      - name: stirlingpdf
        image: ghcr.io/stirling-tools/s-pdf:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
