kubernetes/utilities/stirling-pdf/stirling-pdf-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-traefik
  namespace: utilities
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirlingpdf.kubernetes.timo.be`) || Host(`stirlingpdf.timo.be`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 8080
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-tailscale
  namespace: utilities
spec:
  defaultBackend:
    service:
      name: stirling-pdf
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - stirlingpdf
